--- a/templates/electro/base.html
+++ b/templates/electro/base.html
@@ -49,7 +49,13 @@
             </ul>
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+                <li><a href="#"><i class="fa fa-user-o"></i> {{ user.username }}</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'logout' %}"><i class="fa fa-door"></i> Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}"><i class="fa fa-door-o"></i> Login</a></li>
+
+                {% endif %}
             </ul>
         </div>
     </div>
